# fastapi-authenticated

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  app.db  pyproject.toml
app/: api_schema.py  containers.py  database.py  endpoints.py  main.py
app/api/: deps.py
app/api/routers/: login.py  users.py
app/applications/: login_service.py  user_service.py
app/domains/: exceptions.py  validations.py
app/domains/constants/: role.py
app/domains/entities/: __init__.py  item.py  role.py  user.py  user_role.py
app/domains/repositories/: user_repository.py  user_role_repository.py
app/domains/services/: user_service.py
app/infrastructures/repositories/: user_repository.py  user_role_repository.py
app/routers/: __init__.py  login.py  users.py
app/schemas/: user.py
app/services/: __init__.py  login_service.py  user_service.py
migrations/: env.py
migrations/versions/: 210c1178ae4e_initial_user_insert.py  2edbc6b5ded3_create_user_table.py  490ab0ac3067_create_initial_role.py  4cc0232d22cb_create_user_roles_table.py  50eeeebfb73f_create_user_table.py  53fafd77f4f7_create_user_and_item_table.py  a14af6cf667e_create_user_table.py  beaa9ca1dde7_create_roles_table.py
src/: main.py
tests/: conftest.py
tests/api/: test_login.py  test_users.py
tests/domains/entities/: test_item.py  test_role.py  test_user.py  test_user_role.py
tests/domains/services/: test_user_service.py
tests/infrastructures/repositories/: test_user_repository.py  test_user_role_repository.py
tests/utils/: user.py
