[tool.poetry]
name = "fastapi-authenticated"
version = "0.1.0"
description = ""
authors = ["harokki"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
taskipy = "^1.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
flake8 = "^3.9.2"
pytest = "^6.2.5"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = { cmd = "uvicorn src.main:app --reload", help = "launch test server" }
